--- a/site.css
+++ b/site.css
@@ -30,8 +30,8 @@ body {
 }
 
 .inline {
-    display: inline-block;
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
 }
 
 .texte {
