--- a/site.css
+++ b/site.css
@@ -103,6 +103,13 @@ body {
     }
     .titre{
         margin-top: 0px;
-        margin-bottom: 0px;
+        margin-bottom: 18px;
+        margin-left: -20px;
+    }
+    .texte {
+        line-height: 1.5;
+    }
+    .soustitre{
+        line-height: 0;
     }
 }
