--- a/site.css
+++ b/site.css
@@ -29,6 +29,10 @@ body {
     font-family: 'Alegreya Sans', sans-serif;
 }
 
+.login .titre{
+    width: 600px;
+}
+
 .inline {
     display: flex;
     align-items: center;
@@ -92,8 +96,47 @@ body {
     background-color: white;
     width: 326px;
     height: 326px;
+    border-radius: 20px;
+    color: black;
+    text-align: center;
 
 }
+.login{
+    display:block;
+    width: 100%;
+}
+.avatar{
+    align-items: center;
+}
+.text{
+    border-radius: 20px;
+
+}
+.login .bouton{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border-radius: 30px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-top: 50px;
+    font-weight: 500;
+    width: 300px;    
+}
+.avatar{
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+input{
+    border-radius: 20px;
+    border-style: none;
+    background-color: #D9D9D9;
+    height: 27px;
+}
+.password a{
+    color: black;
+}
+
 @media (max-width: 800px){
     .colonne2{
         width: 160px;
