--- a/site.css
+++ b/site.css
@@ -29,7 +29,7 @@ body {
     font-family: 'Alegreya Sans', sans-serif;
 }
 
-.login .titre{
+.login .titre, .reset_password .titre{
     width: 600px;
 }
 
@@ -96,13 +96,20 @@ body {
     background-color: white;
     width: 326px;
     height: 326px;
-    border-radius: 20px;
+    border-radius: 32px;
     color: black;
     text-align: center;
     line-height: 1;
+    display: flex;
+    flex-direction: column;
+    gap:10px;
 
 }
-.login{
+.reset_password .whitebox {
+    height: 220px;
+}
+
+.login, .reset_password{
     display:block;
     width: 100%;
 }
@@ -113,7 +120,7 @@ body {
     border-radius: 20px;
 
 }
-.login .bouton{
+.login .bouton, .reset_password .bouton{
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     border-radius: 30px;
@@ -122,9 +129,12 @@ body {
     display: flex;
     margin-top: 1px;
     font-weight: 500;
-    width: 300px;    
+    width: 300px;  
+    margin-bottom: 10px;  
 }
 .avatar{
+    height: 50px;
+    width: 50px;
     margin-top: -20px;
     margin-bottom: 20px;
 }
@@ -134,13 +144,20 @@ input{
     background-color: #D9D9D9;
     height: 27px;
 }
-.password a{
+.field{
+    text-align: left;
+    width: 200px;
+}
+.link a{
     color: black;
     margin-top: 10px;
 
 }
 .resetpsw .bouton{
     margin-top: 20;
+}
+.spacer{
+    flex-grow: 1;
 }
 
 @media (max-width: 800px){
