--- a/site.css
+++ b/site.css
@@ -75,6 +75,10 @@ body {
     width: 400px;
 }
 
+.account .colonne1, .account .colonne2 {
+    width: fit-content;
+}
+
 .soustitre{
     font-size: 32px;
     font-family: 'Alegreya Sans', sans-serif;
@@ -138,7 +142,7 @@ body {
     margin-top: -20px;
     margin-bottom: 20px;
 }
-input{
+.field input{
     border-radius: 20px;
     border-style: none;
     background-color: #D9D9D9;
@@ -159,6 +163,28 @@ input{
 .spacer{
     flex-grow: 1;
 }
+
+.tickets{
+    width:138px;
+}
+
+.blackbloxe{
+    background-color: black;
+    color: rgb(0, 0, 0);
+    
+    align-items: center;
+    display: flex;
+    font-family: 'Nunito', sans-serif;
+    background-image: url("images/wallpaper.png");
+    background-size: cover;
+}
+.logout{
+    color: red;
+}
+.account .soustitre h5{
+    margin-top: 0px;
+    margin-bottom: 6px;
+} 
 
 @media (max-width: 800px){
     .colonne2{
